--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Hamza's Blog
+title: Faiz's Blog
 author:
-  name: Syed Hamza Zaidi
-  title: Software Developer 
-  # email: your-email@domain.com
+  name: Syed Faiz Reza Zaidi
+  title: IIT aspirant 
+  # email: thefuzz_25@icloud.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Syed Hamza Zaidi | Software Developer | Undergrad Senior @ BITS Pilani, India
+  Syed Faiz Reza Zaidi | IIT aspirant | 1st year @ FIITJEE Narayanguda, Hyd
 
 google-analytics: G-024QNHMS9W
 
