--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,6 +1,6 @@
 ---
 home:
-    title: Hi, I'm Hamza
+    title: Hi, I'm Faiz
     subtitle: A Software Developer
     content: >
         I'm a final year undergrad at BITS Pilani, India.
