--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,10 +1,10 @@
 ---
 home:
     title: Hi, I'm Faiz
-    subtitle: A Software Developer
+    subtitle: An Enthusiast cum Student
     content: >
-        I'm a final year undergrad at BITS Pilani, India.
-        Currently exploring everything from WebDev to Blockchain.
+        I'm a second year student at FIITJEE Narayanguda, Hyd.
+        Currently studing PCM with a pinch of novels and a sniff of art.
         This website is currently a work-in-progress. Please ignore any incomp
     # button: Click Me!
 
