--- a/_data/content.yml
+++ b/_data/content.yml
@@ -12,13 +12,7 @@ about:
     title: About Me
     subtitle: For the curious,
     content: >
-        My stage name is TheFuzz, and I love creating things. Things that make me happy.
-
-It might be a new craft or trying my hand at a new sport that I hadn’t discovered before, or squeeze some creative use out of some old, forgotten object lying in the garage, or even maybe writing a my sequel of a movie that I liked...
-
-And I am an eager learner... and I find *everything* interesting...
-
-There is no end to learning something new, something that might just gets my mojo *sky high* and has me leaping out of my bed with another idea!
+        My stage name is TheFuzz, and I love creating things. Things that make me happy. It might be a new craft or trying my hand at a new sport that I hadn’t discovered before, or squeeze some creative use out of some old, forgotten object lying in the garage, or even maybe writing a my sequel of a movie that I liked... And I am an eager learner... and I find *everything* interesting... There is no end to learning something new, something that might just gets my mojo *sky high* and has me leaping out of my bed with another idea!
     stats:
         -
             number: 17
