--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ permalink: /blog/:title/
 # generate social links in footer
 socials:
   twitter: athamxa
-  github:  syedhamzazaidi
+  github:  thefuzz25
   # devto: jekyll
   # dribbble: jekyll
   # facebook: jekyll
