--- a/_data/content.yml
+++ b/_data/content.yml
@@ -46,7 +46,7 @@ skills-list:
         Art Media:
             - Pencil sketching
             - Charcoal drawing
-            - Doodle art
+            - Calligraphy
             - Digital Art
         Tools:
             - Procreate
