--- a/_data/content.yml
+++ b/_data/content.yml
@@ -54,7 +54,7 @@ skills-list:
             - Git & GitHub
             - Lightroom
 
-qualifications:
+timeline:
     title: Qualifications
     subtitle: Where I've Been / What I've Done
     tabs:
