--- a/_data/content.yml
+++ b/_data/content.yml
@@ -50,7 +50,7 @@ skills-list:
             - Jekyll & Liquid
         Tools:
             - Procreate
-            - Autodesk Sketchbook
+            - Sketchbook
             - Git & GitHub
             - Lightroom
 
